# cube-tools

./: Cargo.toml  LICENSE  cube-tools.lisp
alg-list-gen/: Cargo.toml
alg-list-gen/src/: lib.rs  main.rs
alg-list-gen/templates/: main.html
alg-trainer/: Cargo.toml
alg-trainer/src/: main.rs
bld-solver/: Cargo.toml
bld-solver/src/: lib.rs  main.rs  subsets.rs
cfop/: Cargo.toml
cfop/src/: lib.rs  main.rs
cube/: Cargo.toml
cube/src/: alg.rs  corner_pos.rs  edge_pos.rs  lib.rs  piece.rs  random_state.rs  sticker_cube.rs
cube/src/alg/: parser.rs
cycles/: Cargo.toml
cycles/src/: lib.rs
kociemba/: Cargo.toml
kociemba/src/: group0.rs  group1.rs  ids.rs  lib.rs  piece_cube.rs  pruning_table.rs  transition_table.rs
random-state/: Cargo.toml
random-state/src/: lib.rs
