[package]
name = "cube"
version = "0.1.0"
authors = ["Joey Gouly <joey.gouly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
